@@ -815,14 +815,7 @@ fi
 
 sysfs-update-devnames
 
-# Make sure udev creates device nodes in time.
-if type udevstart >/dev/null 2>&1; then
-	udevstart
-elif type udevsynthesize >/dev/null 2>&1; then
-	udevsynthesize
-fi
-
-# Also let userdevfs rescan the devices.
+# Let userspace /dev tools rescan the devices.
 if type update-dev >/dev/null 2>&1; then
 	update-dev
 fi
