@@ -2,6 +2,8 @@ hw-detect (1.31) UNRELEASED; urgency=low
 
   * If d-i is using pcmciautils-udeb instead of pcmcia-cs-udeb (needed on
     2.6.13 kernels), then install pcmciautils rather than pcmcia-cs.
+  * The new update-dev that handles udev has been around for a while, so
+    drop old calls to udevstart/udevsynthesize.
 
  -- Colin Watson <cjwatson@debian.org>  Sat, 24 Dec 2005 16:20:46 +0000
 
